--- a/xprof/btx_interval_model.yaml
+++ b/xprof/btx_interval_model.yaml
@@ -1,5 +1,5 @@
 :stream_classes:
-  - :name: some_name
+  - :name: interval
     :event_common_context_field_class:
       :type: structure
       :members:
@@ -28,7 +28,7 @@
             :field_value_range: 64
             :cast_type: int64_t
     :event_classes:
-      - :name: lttng:host 
+      - :name: host
         :payload_field_class:
           :type: structure
           :members:
@@ -45,7 +45,7 @@
               :field_class:
                 :type: bool
                 :cast_type: bt_bool
-      - :name: lttng:device 
+      - :name: device
         :payload_field_class:
           :type: structure
           :members:
@@ -76,7 +76,7 @@
               :field_class:
                 :type: string
                 :cast_type: const char*
-      - :name: lttng:traffic 
+      - :name: traffic
         :payload_field_class:
           :type: structure
           :members:
@@ -89,7 +89,7 @@
                 :type: integer_unsigned
                 :field_value_range: 64
                 :cast_type: uint64_t
-      - :name: lttng:device_name 
+      - :name: device_name
         :payload_field_class:
           :type: structure
           :members:
@@ -102,7 +102,7 @@
                 :type: integer_unsigned
                 :field_value_range: 64
                 :cast_type: uint64_t
-      - :name: lttng_ust_thapi:metadata 
+      - :name: ust_thapi:metadata 
         :payload_field_class:
           :type: structure
           :members:
