--- a/opencl/tests/interval_profiling_normal_command_queue.yaml
+++ b/opencl/tests/interval_profiling_normal_command_queue.yaml
@@ -28,6 +28,7 @@
 - :name: lttng:traffic
   :common_context:
     hostname: aurora12.gov
+    backend: 2
   :payload:
       name: clEnqueueReadBuffer
 - :name: lttng:host
