--- a/opencl/tests/interval_profiling_normal_command_queue_created_in_other_thread.yaml
+++ b/opencl/tests/interval_profiling_normal_command_queue_created_in_other_thread.yaml
@@ -31,6 +31,7 @@
 - :name: lttng:traffic
   :common_context:
     hostname: aurora12.gov
+    backend: 2
   :payload:
     name: clEnqueueReadBuffer
 - :name: lttng:host
