--- a/xprof/btx_interval_model.yaml
+++ b/xprof/btx_interval_model.yaml
@@ -1,5 +1,5 @@
 :stream_classes:
-  - :name: some_name
+  - :name: interval
     :event_common_context_field_class:
       :type: structure
       :members:
@@ -28,7 +28,7 @@
             :field_value_range: 64
             :cast_type: int64_t
     :event_classes:
-      - :name: lttng:host 
+      - :name: lttng:host
         :payload_field_class:
           :type: structure
           :members:
