--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -24,7 +24,8 @@ $options_tally = {
   'display_mode' => [String, 'human'],
   'display_metadata' => [FalseClass, false],
   'display_name_max_size' => [Integer, 80],
-  'display_kernel_verbose' => [FalseClass, false]
+  'display_kernel_verbose' => [FalseClass, false],
+  'backend_level' => [String, '']
 }
 
 def common_options(opts)
