--- a/xprof/btx_aggreg_model.yaml
+++ b/xprof/btx_aggreg_model.yaml
@@ -23,24 +23,24 @@
             :cast_type: const char*
         - :name: min
           :field_class:
-            :type: integer_signed
+            :type: integer_unsigned
             :field_value_range: 64
-            :cast_type: int64_t
+            :cast_type: uint64_t
         - :name: max
           :field_class:
-            :type: integer_signed
+            :type: integer_unsigned
             :field_value_range: 64
-            :cast_type: int64_t
+            :cast_type: uint64_t
         - :name: total
           :field_class:
-            :type: integer_signed
+            :type: integer_unsigned
             :field_value_range: 64
-            :cast_type: int64_t
+            :cast_type: uint64_t
         - :name: count
           :field_class:
-            :type: integer_signed
+            :type: integer_unsigned
             :field_value_range: 64
-            :cast_type: int64_t
+            :cast_type: uint64_t
     :event_classes:
       - :name: tally_host
         :payload_field_class:
@@ -48,14 +48,14 @@
           :members:
             - :name: backend
               :field_class:
-                :type: integer_signed
+                :type: integer_unsigned
                 :field_value_range: 64
-                :cast_type: int64_t
+                :cast_type: uint64_t
             - :name: err_count
               :field_class:
-                :type: integer_signed
+                :type: integer_unsigned
                 :field_value_range: 64
-                :cast_type: int64_t
+                :cast_type: uint64_t
       - :name: tally_device
         :payload_field_class:
           :type: structure
@@ -80,6 +80,6 @@
           :members:
             - :name: backend
               :field_class:
-                :type: integer_signed
+                :type: integer_unsigned
                 :field_value_range: 64
-                :cast_type: int64_t
+                :cast_type: uint64_t
