Backend level argument for iprof (#93)
* draft with bad practice in configure.ac

* fix

* fix

* fix tally test

* Fix narrowing conversion error

* Fix distcheck

* enable compact

* testing g++-7

* checking g++ version

* cleaning

* Add removed g++ library

* add btx_tally pluging and component

* suggestions

* suggestions

* suggestions

* Update xprof/tally.hpp

Co-authored-by: Thomas Applencourt <TApplencourt@users.noreply.github.com>

* suggestions

* typos, cleaning

* before formatting

* formatting

* cleaning

* cleaning

* suggestions

* fix

* fixed

* Update btx_interval_model.yaml

* set backend level via env variable

* update

* fix

* update comment

* --backend_level

* suggestions

* suggestions

* update

* update

* update

* Update spliting to a more readable format

* suggestions

* update

* Update utils/babeltrace_thapi.in

Co-authored-by: Brice Videau <brice.videau@gmail.com>

* Update utils/xprof_utils.hpp

Co-authored-by: Brice Videau <brice.videau@gmail.com>

* Update xprof/tally.cpp

Co-authored-by: Brice Videau <brice.videau@gmail.com>

* fix identation

* implitic max value

* add namespace

* fix merge resolution

* Update utils/xprof_utils.hpp

* Update xprof/tally.cpp

* add --backed-level option to command line help

---------

Co-authored-by: Thomas Applencourt <TApplencourt@users.noreply.github.com>
Co-authored-by: Brice Videau <brice.videau@gmail.com>

--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -100,6 +100,7 @@ display_help() {
     echo "  -l, --timeline            Dump the timeline. Will create a `out.pftrace` file that can be opened in perfetto (https://ui.perfetto.dev/#!/viewer)"
     echo "  -j, --json                Summary will be printed as json"
     echo "  -m, --tracing-mode <mode> [minimal, default, full]"
+    echo " --backend-level <name:value,...> Update tally default backend levels"
     echo "  --asm                     Dump in your current directory low-level kernels information (asm, isa, visa, ...)"
     echo "  --no-save                 Data will be processed on-the-fly"
     echo "  --mangle                  Use mangled name"
@@ -521,6 +522,7 @@ while (( "$#" )); do
         -l | --timeline)        shift; timeline=true ;;
         -j | --json)            shift; bt_tally_argv+=" --display_mode=json" ;;
         -m | --tracing-mode)    shift; tracing_mode=$1; shift ;;
+        --backend-level)        shift; bt_tally_argv+=" --backend_level=$1"; shift ;;
         --no-save)              shift; procesing_mode="on-the-fly" ;;
         --traced-ranks)         shift; traced_ranks=$1; shift ;;
         --asm)                  shift; asm=true ;;
