--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -22,10 +22,10 @@ xprof_utils.hpp: $(top_srcdir)/utils/xprof_utils.hpp
 
 # Some build-system hack because we use  pattern rules and not grouped target
 # 	"Multiple target patterns in pattern rules are always treated as grouped targets (see Multiple Targets in a Rule) regardless of whether they use the : or &: separator."
-btx_source_timeline_upstream_model.yaml: btx_interval_model.yaml
+btx_sink_timeline_upstream_model.yaml: btx_interval_model.yaml
 	cp $< $(builddir)/$@
 
-btx_source_tally_upstream_model.yaml: btx_aggreg_model.yaml
+btx_sink_tally_upstream_model.yaml: btx_aggreg_model.yaml
 	cp $< $(builddir)/$@
 
 btx_filter_aggreg_upstream_model.yaml: btx_interval_model.yaml
@@ -34,27 +34,27 @@ btx_filter_aggreg_upstream_model.yaml: btx_interval_model.yaml
 btx_filter_aggreg_downstream_model.yaml: btx_aggreg_model.yaml
 	cp $< $(builddir)/$@
 
-btx_source_%/metababel/metababel.h btx_source_%/metababel/btx_component.h btx_source_%/metababel/btx_component.c btx_source_%/metababel/btx_upstream.h btx_source_%/metababel/btx_upstream.c btx_source_%/btx_main.c: btx_source_%_upstream_model.yaml btx_%_params.yaml
-	$(METABABEL) -u $(builddir)/btx_source_$*_upstream_model.yaml -t SINK -o btx_source_$* -p btx_$* -c $* --params $(srcdir)/btx_$*_params.yaml
+btx_sink_%/metababel/metababel.h btx_sink_%/metababel/btx_component.h btx_sink_%/metababel/btx_component.c btx_sink_%/metababel/btx_upstream.h btx_sink_%/metababel/btx_upstream.c btx_sink_%/btx_main.c: btx_sink_%_upstream_model.yaml btx_%_params.yaml
+	$(METABABEL) -u $(builddir)/btx_sink_$*_upstream_model.yaml -t SINK -o btx_sink_$* -p btx_$* -c $* --params $(srcdir)/btx_$*_params.yaml
 
 btx_filter_%/metababel/metababel.h btx_filter_%/metababel/btx_component.h btx_filter_%/metababel/btx_component.c btx_filter_%/metababel/btx_upstream.h btx_filter_%/metababel/btx_upstream.c btx_filter_%/metababel/btx_downstream.h btx_filter_%/metababel/btx_downstream.c btx_filter_%/btx_main.c: btx_filter_%_upstream_model.yaml btx_filter_%_downstream_model.yaml btx_%_params.yaml
 	$(METABABEL) -u $(builddir)/btx_filter_$*_upstream_model.yaml -d $(builddir)/btx_filter_$*_downstream_model.yaml -t FILTER -o btx_filter_$* -p btx_$* -c $* --params $(srcdir)/btx_$*_params.yaml
 
 BTX_TALLY_GENERATED = \
-	btx_source_tally/metababel/metababel.h \
-	btx_source_tally/metababel/btx_component.h \
-	btx_source_tally/metababel/btx_component.c \
-	btx_source_tally/metababel/btx_upstream.h \
-	btx_source_tally/metababel/btx_upstream.c \
-	btx_source_tally/btx_main.c
+	btx_sink_tally/metababel/metababel.h \
+	btx_sink_tally/metababel/btx_component.h \
+	btx_sink_tally/metababel/btx_component.c \
+	btx_sink_tally/metababel/btx_upstream.h \
+	btx_sink_tally/metababel/btx_upstream.c \
+	btx_sink_tally/btx_main.c
 
 BTX_TIMELINE_GENERATED = \
-	btx_source_timeline/metababel/metababel.h \
-	btx_source_timeline/metababel/btx_component.h \
-	btx_source_timeline/metababel/btx_component.c \
-	btx_source_timeline/metababel/btx_upstream.h \
-	btx_source_timeline/metababel/btx_upstream.c \
-	btx_source_timeline/btx_main.c
+	btx_sink_timeline/metababel/metababel.h \
+	btx_sink_timeline/metababel/btx_component.h \
+	btx_sink_timeline/metababel/btx_component.c \
+	btx_sink_timeline/metababel/btx_upstream.h \
+	btx_sink_timeline/metababel/btx_upstream.c \
+	btx_sink_timeline/btx_main.c
 
 BTX_AGGREG_GENERATED = \
         btx_filter_aggreg/metababel/metababel.h \
@@ -111,12 +111,12 @@ libXAggreg_la_SOURCES = \
 # JSON: Right now we harcode it, We should use pkgtools at some point https://github.com/nlohmann/json/blob/develop/single_include/nlohmann/json.hpp
 
 # Compiler flags
-libXTally_la_CPPFLAGS = -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_source_tally
+libXTally_la_CPPFLAGS = -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_sink_tally
 libXTally_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
 libXTally_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
 libXTally_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
 
-libXTimeline_la_CPPFLAGS = -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_source_timeline
+libXTimeline_la_CPPFLAGS = -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_sink_timeline
 libXTimeline_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
 libXTimeline_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS) $(PROTOBUF_CFLAGS)
 libXTimeline_la_LDFLAGS = $(BABELTRACE2_LIBS) $(PROTOBUF_LIBS) -avoid-version -module
@@ -176,8 +176,8 @@ CLEANFILES = \
 	$(TALLY_DUST_FILES) \
 	perfetto_prunned.pb.h \
 	perfetto_prunned.pb.cc \
-	btx_source_timeline_upstream_model.yaml \
-	btx_source_tally_upstream_model.yaml \
+	btx_sink_timeline_upstream_model.yaml \
+	btx_sink_tally_upstream_model.yaml \
 	btx_filter_aggreg_upstream_model.yaml \
 	btx_filter_aggreg_downstream_model.yaml \
 	$(BTX_TIMELINE_GENERATED) \
