--- a/xprof/btx_aggreg_model.yaml
+++ b/xprof/btx_aggreg_model.yaml
@@ -83,3 +83,53 @@
                 :type: integer_unsigned
                 :field_value_range: 64
                 :cast_type: uint64_t
+  - :name: interval
+    :event_common_context_field_class:
+      :type: structure
+      :members:
+        - :name: hostname
+          :field_class:
+            :type: string
+            :cast_type: const char*
+        - :name: vpid
+          :field_class:
+            :type: integer_signed
+            :field_value_range: 64
+            :cast_type: int64_t
+        - :name: vtid
+          :field_class:
+            :type: integer_unsigned
+            :field_value_range: 64
+            :cast_type: uint64_t
+        - :name: ts
+          :field_class:
+            :type: integer_signed
+            :field_value_range: 64
+            :cast_type: int64_t
+        - :name: backend
+          :field_class:
+            :type: integer_signed
+            :field_value_range: 64
+            :cast_type: int64_t
+    :event_classes:
+      - :name: lttng:device_name
+        :payload_field_class:
+          :type: structure
+          :members:
+            - :name: name
+              :field_class:
+                :type: string
+                :cast_type: const char*
+            - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+      - :name: lttng_ust_thapi:metadata
+        :payload_field_class:
+          :type: structure
+          :members:
+            - :name: metadata
+              :field_class:
+                :type: string
+                :cast_type: const char*
