Use grouped target

--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -20,26 +20,6 @@ xprof_utils.hpp: $(top_srcdir)/utils/xprof_utils.hpp
 %.pb.h %.pb.cc: %.proto
 	$(PROTOC) -I=$(srcdir) --cpp_out=$(builddir) $<
 
-# Some build-system hack because we use  pattern rules and not grouped target
-# 	"Multiple target patterns in pattern rules are always treated as grouped targets (see Multiple Targets in a Rule) regardless of whether they use the : or &: separator."
-btx_sink_timeline_upstream_model.yaml: btx_interval_model.yaml
-	cp $< $(builddir)/$@
-
-btx_sink_tally_upstream_model.yaml: btx_aggreg_model.yaml
-	cp $< $(builddir)/$@
-
-btx_filter_aggreg_upstream_model.yaml: btx_interval_model.yaml
-	cp $< $(builddir)/$@
-
-btx_filter_aggreg_downstream_model.yaml: btx_aggreg_model.yaml
-	cp $< $(builddir)/$@
-
-btx_sink_%/metababel/metababel.h btx_sink_%/metababel/btx_component.h btx_sink_%/metababel/btx_component.c btx_sink_%/metababel/btx_upstream.h btx_sink_%/metababel/btx_upstream.c btx_sink_%/btx_main.c: btx_sink_%_upstream_model.yaml btx_%_params.yaml
-	$(METABABEL) -u $(builddir)/btx_sink_$*_upstream_model.yaml -t SINK -o btx_sink_$* -p btx_$* -c $* --params $(srcdir)/btx_$*_params.yaml
-
-btx_filter_%/metababel/metababel.h btx_filter_%/metababel/btx_component.h btx_filter_%/metababel/btx_component.c btx_filter_%/metababel/btx_upstream.h btx_filter_%/metababel/btx_upstream.c btx_filter_%/metababel/btx_downstream.h btx_filter_%/metababel/btx_downstream.c btx_filter_%/btx_main.c: btx_filter_%_upstream_model.yaml btx_filter_%_downstream_model.yaml btx_%_params.yaml
-	$(METABABEL) -u $(builddir)/btx_filter_$*_upstream_model.yaml -d $(builddir)/btx_filter_$*_downstream_model.yaml -t FILTER -o btx_filter_$* -p btx_$* -c $* --params $(srcdir)/btx_$*_params.yaml
-
 BTX_TALLY_GENERATED = \
 	btx_sink_tally/metababel/metababel.h \
 	btx_sink_tally/metababel/btx_component.h \
@@ -65,6 +45,15 @@ BTX_AGGREG_GENERATED = \
         btx_filter_aggreg/metababel/btx_downstream.h \
         btx_filter_aggreg/metababel/btx_downstream.c \
         btx_filter_aggreg/btx_main.c
+
+$(BTX_TIMELINE_GENERATED) &: btx_interval_model.yaml btx_timeline_params.yaml
+	$(METABABEL) -u $(srcdir)/btx_interval_model.yaml -t SINK -o btx_sink_timeline -p btx_timeline -c timeline --params $(srcdir)/btx_timeline_params.yaml
+
+$(BTX_TALLY_GENERATED) &: btx_aggreg_model.yaml btx_tally_params.yaml
+	$(METABABEL) -u $(srcdir)/btx_aggreg_model.yaml -t SINK -o btx_sink_tally -p btx_tally -c tally --params $(srcdir)/btx_tally_params.yaml
+
+$(BTX_AGGREG_GENERATED) &: btx_interval_model.yaml btx_aggreg_model.yaml btx_aggreg_params.yaml
+	$(METABABEL) -u $(srcdir)/btx_interval_model.yaml -d $(srcdir)/btx_aggreg_model.yaml -t FILTER -o btx_filter_aggreg -p btx_aggreg -c aggreg --params $(srcdir)/btx_aggreg_params.yaml
 
 BUILT_SOURCES = \
 	$(BTX_TALLY_GENERATED) \
@@ -124,7 +113,7 @@ libXTimeline_la_LDFLAGS = $(BABELTRACE2_LIBS) $(PROTOBUF_LIBS) -avoid-version -m
 
 libXAggreg_la_CPPFLAGS = -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_filter_aggreg
 libXAggreg_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
-libXAggreg_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS) 
+libXAggreg_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
 libXAggreg_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
 
 # Cannot use check_LTLIBRARIES because we need the shared version of those
@@ -176,10 +165,6 @@ CLEANFILES = \
 	$(TALLY_DUST_FILES) \
 	perfetto_prunned.pb.h \
 	perfetto_prunned.pb.cc \
-	btx_sink_timeline_upstream_model.yaml \
-	btx_sink_tally_upstream_model.yaml \
-	btx_filter_aggreg_upstream_model.yaml \
-	btx_filter_aggreg_downstream_model.yaml \
 	$(BTX_TIMELINE_GENERATED) \
 	$(BTX_TALLY_GENERATED) \
 	$(BTX_AGGREG_GENERATED)
